fixed opacity on homepage and gap

--- a/demo.css
+++ b/demo.css
@@ -2,7 +2,7 @@
   font-family:"Oswald";
 }
 body{
-  background-image: url(/Users/learn/Desktop/ruby_new.png);
+  background-image: url(/Users/learn/Desktop/Test_Folder_HD/ruby_new.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -16,7 +16,6 @@ body{
   width: 90%;
   margin-top: 20px;
   margin-bottom: 200px;
-  height: 200px;
 }
 h2{
   text-align: center;
